k8s/istio/auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth
  labels:
    app: auth
    version: v1
spec:
  selector:
    matchLabels:
      app: auth
  replicas: 1
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
        - name: app
          image: vahidmostofi/bookstore_auth
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3007
          readinessProbe:
            httpGet:
              path: /health
              port: 3007
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: 0.25
            limits:
              memory: "512Mi"
              cpu: 0.25
---
apiVersion: v1
kind: Service
metadata:
  name: auth
spec:
  selector:
    app: auth
  ports:
    - port: 3007
      name: http-web
