k8s/istio/books.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: books
  labels:
    app: books
    version: v1
spec:
  selector:
    matchLabels:
      app: books
  replicas: 1
  template:
    metadata:
      labels:
        app: books
    spec:
      containers:
        - name: app
          image: vahidmostofi/bookstore_books
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3009
          readinessProbe:
            httpGet:
              path: /health
              port: 3009
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
          resources:
            requests:
              memory: "512Mi"
              cpu: 0.25
            limits:
              memory: "512Mi"
              cpu: 0.25
---
apiVersion: v1
kind: Service
metadata:
  name: books
spec:
  selector:
    app: books
  ports:
    - port: 3009
      name: http-web
