k8s/istio/gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
    version: v1
spec:
  selector:
    matchLabels:
      app: gateway
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: gateway
    spec:
      terminationGracePeriodSeconds: 13
      containers:
        - name: app
          image: vahidmostofi/bookstore_entry
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 5
            failureThreshold: 3
          # lifecycle:
          #   preStop:
          #     exec:
          #       command:
          #         - /bin/sh
          #         - -c
          #         - echo "Goodbye at" `date`
          resources:
            requests:
              memory: "512Mi"
              cpu: 0.25
            limits:
              memory: "512Mi"
              cpu: 0.25
---
apiVersion: v1
kind: Service
metadata:
  name: gateway #this will be the Domain name
spec:
  selector:
    app: gateway
  ports:
    - port: 9080
      targetPort: 8080
      name: http-web
